# restic-sync

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.github/workflows/: docker-publish.yml
src/: main.rs
tests/: 01_initial_and_prune.sh  02_config_corruption.sh  03_dockerized_cron.sh  common.sh
